application-page-2 was created

--- a/app/pug/login-page.pug
+++ b/app/pug/login-page.pug
@@ -25,10 +25,10 @@ block content
             form.form
               .form__line
                 .form-group
-                  +input-animation({label:'Email:', name:'email', animated:true})(type="email")
+                  +input-animation({label:'Email:'})(type="email" id="email")
               .form__line
                 .form-group
-                  +input-animation({label:'Password:', name:'password', animated:true})(type="password")
+                  +input-animation({label:'Password:'})(type="password" id="password")
               .form__line
                 .column-group.column-group--md.column-group--justify-items-center
                   .column-group__item
