--- a/app/sass/components/row-group.sass
+++ b/app/sass/components/row-group.sass
@@ -6,6 +6,8 @@
     align-items: center
   &--justify-center
     justify-content: center
+  &--nowrap
+    flex-wrap: nowrap
   &--flex-1
     .row-group__item
       flex: 1
