--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -23,6 +23,7 @@
 @import ./components/form-box
 @import ./components/form-group
 @import ./components/form-divider
+@import ./components/textarea
 @import ./components/input
 @import ./components/input-animation
 @import ./components/input-group
@@ -35,3 +36,5 @@
 @import ./components/inner-header
 @import ./components/application-form
 @import ./components/form-steps
+@import ./components/documents-list
+@import ./components/document-list-item
