--- a/app/sass/components/form-steps.sass
+++ b/app/sass/components/form-steps.sass
@@ -9,18 +9,9 @@ $c-text  : #9b9b9b
     position: relative
     flex: 1
     padding: 14px 20px
-    text-align: center
     border-bottom: 3px solid transparent
     background-color: $c-white
     background-color: rgba($c-white, 1.3)
-    font-size: rem(14px)
-    line-height: 1
-    font-weight: 600
-    color: $c-text
-    cursor: default
-    user-select: none
-    &:focus
-      color: $c-text
     &:after
       position: absolute
       content: ''
@@ -54,9 +45,25 @@ $c-text  : #9b9b9b
     &.is-active
       border-color: $c-surfie-green
       background-color: $c-white
-      box-shadow: $s-primary
-      line-height: 1
-      font-weight: 700
-      color: $c-mine-shaft
+      .form-steps__title
+        color: $c-mine-shaft
+        font-weight: 700
       &:after
         border-left-color: $c-white
+    &.is-done
+      .form-steps__title
+        &:after
+          content: ''
+          margin-left: 5px
+          width: 13px
+          height: 9px
+          +bg-img('../images/icons/check-green.svg', auto, center)
+  &__title
+    display: flex
+    align-items: center
+    justify-content: center
+    font-size: rem(14px)
+    line-height: 1
+    font-weight: 600
+    color: $c-text
+    user-select: none
