--- a/app/static/styles/main.css
+++ b/app/static/styles/main.css
@@ -627,12 +627,19 @@ p,
   height: 100%;
 }
 
+.custom-scroll .simplebar-vertical {
+  background-color: #EBEBEF;
+  border-radius: 3px;
+  width: 5px;
+}
+
 .custom-scroll .simplebar-scrollbar:before {
   border-radius: 3px;
   background: #9D9D9D;
   right: 0;
   left: auto;
   width: 5px;
+  opacity: 1;
 }
 
 .login-page {
@@ -773,6 +780,11 @@ p,
   justify-content: center;
 }
 
+.row-group--nowrap {
+  -ms-flex-wrap: nowrap;
+  flex-wrap: nowrap;
+}
+
 .row-group--flex-1 .row-group__item {
   -webkit-box-flex: 1;
   -ms-flex: 1;
@@ -906,6 +918,51 @@ p,
   line-height: 1;
 }
 
+.textarea {
+  width: 100%;
+  display: block;
+  padding: 12px 15px 12px;
+  font-size: 0.9375rem;
+  line-height: 1;
+  font-weight: 400;
+  border-radius: 3px;
+  color: #444444;
+  background-color: #FFFFFF;
+  border: 1px solid #DADADA;
+  -webkit-transition: 0.2s;
+  transition: 0.2s;
+  resize: none;
+}
+
+.textarea::-webkit-input-placeholder {
+  color: #9D9D9D;
+  font-size: 0.875rem;
+}
+
+.textarea::-moz-placeholder {
+  color: #9D9D9D;
+  font-size: 0.875rem;
+}
+
+.textarea:-ms-input-placeholder {
+  color: #9D9D9D;
+  font-size: 0.875rem;
+}
+
+.textarea::-ms-input-placeholder {
+  color: #9D9D9D;
+  font-size: 0.875rem;
+}
+
+.textarea::placeholder {
+  color: #9D9D9D;
+  font-size: 0.875rem;
+}
+
+.textarea:focus {
+  border-color: #0E7D7D;
+}
+
 .input {
   width: 100%;
   display: block;
@@ -920,8 +977,29 @@ p,
   transition: 0.2s;
 }
 
-.input:placeholder {
+.input::-webkit-input-placeholder {
   color: #9D9D9D;
+  font-size: 0.875rem;
+}
+
+.input::-moz-placeholder {
+  color: #9D9D9D;
+  font-size: 0.875rem;
+}
+
+.input:-ms-input-placeholder {
+  color: #9D9D9D;
+  font-size: 0.875rem;
+}
+
+.input::-ms-input-placeholder {
+  color: #9D9D9D;
+  font-size: 0.875rem;
+}
+
+.input::placeholder {
+  color: #9D9D9D;
+  font-size: 0.875rem;
 }
 
 .input--bordered {
@@ -942,6 +1020,7 @@ p,
   top: 0;
   font-weight: 600;
   background-color: #FFFFFF;
+  font-size: 0.75rem;
   color: #444444;
 }
 
@@ -956,7 +1035,7 @@ p,
   left: 10px;
   -webkit-transform: translateY(-50%);
   transform: translateY(-50%);
-  font-size: 0.9375rem;
+  font-size: 0.875rem;
   font-weight: 400;
   line-height: 1;
   color: #9D9D9D;
@@ -1227,6 +1306,10 @@ p,
   opacity: 0.8;
 }
 
+.button:focus {
+  color: #FFFFFF;
+}
+
 .button:focus:after {
   -webkit-box-shadow: 0 0 0 0.2rem rgba(14, 125, 125, 0.5);
   box-shadow: 0 0 0 0.2rem rgba(14, 125, 125, 0.5);
@@ -1279,6 +1362,10 @@ p,
   opacity: 0.6;
 }
 
+.button--white:focus {
+  color: #0E7D7D;
+}
+
 .button--white:focus:after {
   -webkit-box-shadow: 0 0 0 0.2rem rgba(255, 255, 255, 0.5);
   box-shadow: 0 0 0 0.2rem rgba(255, 255, 255, 0.5);
@@ -1290,6 +1377,10 @@ p,
 
 .button--transparent:after {
   background-color: transparent;
+}
+
+.button--transparent:focus {
+  color: #444444;
 }
 
 .button--transparent:hover {
@@ -1382,7 +1473,7 @@ p,
   -webkit-box-pack: justify;
   -ms-flex-pack: justify;
   justify-content: space-between;
-  font-size: 0.9375rem;
+  font-size: 0.875rem;
   font-weight: 400;
   line-height: 1;
   color: #9D9D9D;
@@ -1465,7 +1556,7 @@ p,
   justify-content: space-between;
   padding: 10px 15px;
   white-space: nowrap;
-  font-size: 1rem;
+  font-size: 0.875rem;
   font-weight: 400;
   color: #9D9D9D;
 }
@@ -1536,20 +1627,20 @@ p,
   margin-bottom: 20px;
 }
 
-.application-form__heading {
-  background-color: #FFFFFF;
-  border-radius: 3px;
-  -webkit-box-shadow: 0px 4px 5px rgba(0, 0, 0, 0.05);
-  box-shadow: 0px 4px 5px rgba(0, 0, 0, 0.05);
-  padding: 18px 60px;
-}
-
 .application-form__card {
   background-color: #FFFFFF;
   border-radius: 3px;
   -webkit-box-shadow: 0px 4px 5px rgba(0, 0, 0, 0.05);
   box-shadow: 0px 4px 5px rgba(0, 0, 0, 0.05);
   padding: 30px 60px;
+}
+
+.application-form__card--danger {
+  border: 2px solid #CC2936;
+}
+
+.application-form__card--sm {
+  padding: 18px 60px;
 }
 
 .application-form__card-line:not(:last-child) {
@@ -1571,23 +1662,9 @@ p,
   -ms-flex: 1;
   flex: 1;
   padding: 14px 20px;
-  text-align: center;
   border-bottom: 3px solid transparent;
   background-color: #FFFFFF;
   background-color: white;
-  font-size: 0.875rem;
-  line-height: 1;
-  font-weight: 600;
-  color: #9b9b9b;
-  cursor: default;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-}
-
-.form-steps__step:focus {
-  color: #9b9b9b;
 }
 
 .form-steps__step:after {
@@ -1636,15 +1713,92 @@ p,
 .form-steps__step.is-active {
   border-color: #0E7D7D;
   background-color: #FFFFFF;
-  -webkit-box-shadow: 0px 4px 5px rgba(0, 0, 0, 0.05);
-  box-shadow: 0px 4px 5px rgba(0, 0, 0, 0.05);
-  line-height: 1;
-  font-weight: 700;
+}
+
+.form-steps__step.is-active .form-steps__title {
   color: #3D3D3D;
+  font-weight: 700;
 }
 
 .form-steps__step.is-active:after {
   border-left-color: #FFFFFF;
+}
+
+.form-steps__step.is-done .form-steps__title:after {
+  content: '';
+  margin-left: 5px;
+  width: 13px;
+  height: 9px;
+  background-image: url("../images/icons/check-green.svg");
+  background-size: auto;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.form-steps__title {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  font-size: 0.875rem;
+  line-height: 1;
+  font-weight: 600;
+  color: #9b9b9b;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+.documents-list {
+  width: 100%;
+  max-width: 280px;
+}
+
+.documents-list__scroll {
+  max-height: 160px;
+}
+
+.documents-list__item:not(:last-child) {
+  margin-bottom: 20px;
+}
+
+.document-list-item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+}
+
+.document-list-item__icon {
+  margin-right: 20px;
+}
+
+.document-list-item__title {
+  font-size: 0.875rem;
+  font-weight: 400;
+  line-height: 1;
+  color: #9D9D9D;
+  margin-right: 15px;
+}
+
+.document-list-item__delete {
+  cursor: pointer;
+  -webkit-transition: 0.2s;
+  transition: 0.2s;
+  padding: 5px;
+}
+
+.document-list-item__delete:hover {
+  -webkit-transform: scale(1.2);
+  transform: scale(1.2);
 }
 
 @media (min-width: 361px) {
@@ -2739,12 +2893,12 @@ p,
     padding-right: 65px;
   }
 
-  .application-form__heading {
-    padding: 18px 30px;
-  }
-
   .application-form__card {
     padding: 30px 30px;
+  }
+
+  .application-form__card--sm {
+    padding: 18px 30px;
   }
 }
 
@@ -2783,12 +2937,12 @@ p,
     margin-right: 15px;
   }
 
-  .application-form__heading {
-    padding: 18px 20px;
-  }
-
   .application-form__card {
     padding: 30px 20px;
+  }
+
+  .application-form__card--sm {
+    padding: 18px 20px;
   }
 }
 
@@ -2798,11 +2952,11 @@ p,
     font-size: 15px;
   }
 
-  .application-form__heading {
-    padding: 18px 15px;
-  }
-
   .application-form__card {
     padding: 30px 15px;
+  }
+
+  .application-form__card--sm {
+    padding: 18px 15px;
   }
 }
