aoolication pages were refactored

--- a/app/pug/pages/application-page/step-1/_index.pug
+++ b/app/pug/pages/application-page/step-1/_index.pug
@@ -17,9 +17,6 @@ form.application-form
     ])
 
   .application-form__item
-    .application-form__heading
-      h4.text-surfie-green What kind of services do you provide?
-  .application-form__item
     include ./card-1
   .application-form__item
     include ./card-2
@@ -31,6 +28,8 @@ form.application-form
     include ./card-5
   .application-form__item
     include ./card-6
+  .application-form__item
+    include ./card-7
   .application-form__item
     .button-group
       +button({classes:'button-group__button', type:'white'})(href="application-page-1.html")| Back
