--- a/app/pug/pages/application-page/step-2/_index.pug
+++ b/app/pug/pages/application-page/step-2/_index.pug
@@ -21,9 +21,6 @@ form.application-form
     ])
 
   .application-form__item
-    .application-form__card.application-form__card--sm
-      h4.text-surfie-green What education do you have?
-  .application-form__item
     include ./card-1
   .application-form__item
     include ./card-2
@@ -33,6 +30,8 @@ form.application-form
     include ./card-4
   .application-form__item
     include ./card-5
+  .application-form__item
+    include ./card-6
   .application-form__item
     .button-group
       +button({classes:'button-group__button', type:'white'})(href="application-page-1.html")| Back
