--- a/app/pug/pages/application-page/step-2/card-3.pug
+++ b/app/pug/pages/application-page/step-2/card-3.pug
@@ -1,18 +1,21 @@
-.application-form__card
+.application-form__card.application-form__card--danger
 
   .application-form__card-line
-    .column-group.column-group--sm
-      .column-group__item
-        p.font-semibold Documents:
-      .column-group__item
-        p
-          | - Attach your Diplomas if avaliable<br/>
-          | - Attach your CV<br/>
-          | - Attach your document with that you can issue the invoice
+    p.text-brick-red.font-semibold *Choose Yes or No to continue
   .application-form__card-line
-    +documents-list()
+    .form-group
+      .form-group__header
+        h4 Will you be able to issue the invoice for your services?
+      .row-group
+        .row-group__item
+          +radio({label:'Yes', name:'invoiceAbility', value:'yes', checked:true})
+        .row-group__item
+          +radio({label:'No', name:'invoiceAbility', value:'no'})
+
   .application-form__card-line
-    +button({type:'bordered'})(type="button")
-      span Add more
-      span.button__icon
-        +icon({name:'plus', fill:'surfie-green', width:'14', height:'14'})
+    .row
+      .col-12.col-md-6
+        .form-group
+          .form-group__header
+            p Regarding what document you can issue the invoice?
+          +textarea()(placeholder="Type here")
