--- a/app/sass/components/button.sass
+++ b/app/sass/components/button.sass
@@ -43,6 +43,8 @@
     &:after
       background-color: transparent
       border: 2px solid $c-surfie-green
+    &:focus
+      color: $c-surfie-green
     &:hover
       color: $c-white
       svg
