--- a/app/pug/pages/application-page/step-1/card-3.pug
+++ b/app/pug/pages/application-page/step-1/card-3.pug
@@ -2,49 +2,62 @@
   .application-form__card-line
     .form-group
       .form-group__header
-        h4 Creative proofreading
+        h4 Standard proofreading
       .row-group
         .row-group__item
-          +radio({label:'Yes', name:'cProofreading', value:'yes', checked:true})
+          +radio({label:'Yes', name:'proofreading', value:'yes', checked:true})
         .row-group__item
-          +radio({label:'No', name:'cProofreading', value:'no'})
+          +radio({label:'No', name:'proofreading', value:'no'})
 
   .application-form__card-line
     .row
-      .col-12.col-md-6.mb-6.mb-md-0
-        .form-group
-          .form-group__header
-            p What combinations do you translate?
-          .row
-            .col-12.col-lg-6
-              +select({
-                label:{name:'Lithianian', selected:true},
-                options:[
-                  {name:'Lithianian'},
-                  {name:'English'},
-                  {name:'German'},
-                ]
-              })
       .col-12.col-md-6
         .form-group
           .form-group__header
-            p Your prefered price per <span class="font-bold">1 word</span>
-          .row
-            .col-12.col-lg-8
-              .input-group
-                .input-group__input
-                  +input({})(type="number" placeholder="0.00")
-                .input-group__append.input-group__append--p-0
-                  +select({
-                    transparent:true,
-                    label:{name:'EUR', selected:true},
-                    options:[
-                      {name:'EUR'},
-                      {name:'GBP'},
-                      {name:'LVL'},
-                      {name:'LTL'},
-                    ]
-                 })
+            p How do you calculate the price?
+          +select({
+            label:{name:'Select', selected:true},
+            options:[
+              {name:'Select 1'},
+              {name:'Select 2'},
+              {name:'Select 3'},
+            ]
+          })
+
+  .application-form__card-line
+    .form-group
+      .form-group__header
+        p What languages do you proofread?
+      .column-group.column-group--sm
+        +times(2)
+          .column-group__item
+            .row
+              .col-12.col-md-4.mb-3.mb-md-0
+                +select({
+                  label:{name:'Lithianian', selected:true},
+                  options:[
+                    {name:'Lithianian'},
+                    {name:'English'},
+                    {name:'German'},
+                  ]
+                })
+              .col-12.col-md-8
+                .input-group
+                  .input-group__prepend
+                    p Your prefered price per <span class="font-bold">1 word</span>
+                  .input-group__input
+                    +input({})(type="number" placeholder="0.00")
+                  .input-group__append.input-group__append--p-0
+                    +select({
+                      transparent:true,
+                      label:{name:'EUR', selected:true},
+                      options:[
+                        {name:'EUR'},
+                        {name:'GBP'},
+                        {name:'LVL'},
+                        {name:'LTL'},
+                      ]
+                    })
 
   .application-form__card-line
     +button({type:'bordered'})(type="button")
