--- a/app/pug/pages/application-page/step-2/card-4.pug
+++ b/app/pug/pages/application-page/step-2/card-4.pug
@@ -1,32 +1,18 @@
 .application-form__card
 
   .application-form__card-line
-    .row
-      .col-12.col-md-10.col-lg-7
-        .form-group
-          .form-group__header
-            h4 Please select your strongest fileds:
-          .row.mb-4
-            .col-12.col-xs-6.mb-3.mb-xs-0
-              .column-group.column-group--sm
-                .column-group__item
-                  +checkbox({ label:'Technical', checked:true })
-                .column-group__item
-                  +checkbox({ label:'Financial'})
-                .column-group__item
-                  +checkbox({ label:'Scientifics'})
-                .column-group__item
-                  +checkbox({ label:'Travel'})
-            .col-12.col-xs-6
-              .column-group.column-group--sm
-                .column-group__item
-                  +checkbox({ label:'Medicial', checked:true })
-                .column-group__item
-                  +checkbox({ label:'Standard documents'})
-                .column-group__item
-                  +checkbox({ label:'Automative'})
-                .column-group__item
-                  +checkbox({ label:'Education'})
-          .row
-            .col-12.col-md-6
-              +input({bordered:true})(type="text" placeholder="Custom")
+    .column-group.column-group--sm
+      .column-group__item
+        p.font-semibold Documents:
+      .column-group__item
+        p
+          | - Attach your Diplomas if avaliable<br/>
+          | - Attach your CV<br/>
+          | - Attach your document with that you can issue the invoice
+  .application-form__card-line
+    +documents-list()
+  .application-form__card-line
+    +button({type:'bordered'})(type="button")
+      span Add more
+      span.button__icon
+        +icon({name:'plus', fill:'surfie-green', width:'14', height:'14'})
