--- a/app/pug/pages/application-page/step-1/card-4.pug
+++ b/app/pug/pages/application-page/step-1/card-4.pug
@@ -17,14 +17,7 @@
             p What combinations do you translate?
           .row
             .col-12.col-lg-6
-              +select({
-                label:{name:'Lithianian', selected:true},
-                options:[
-                  {name:'Lithianian'},
-                  {name:'English'},
-                  {name:'German'},
-                ]
-              })
+              +lang-alt-select()
       .col-12.col-md-6
         .form-group
           .form-group__header
@@ -35,16 +28,7 @@
                 .input-group__input
                   +input({})(type="number" placeholder="0.00")
                 .input-group__append.input-group__append--p-0
-                  +select({
-                    transparent:true,
-                    label:{name:'EUR', selected:true},
-                    options:[
-                      {name:'EUR'},
-                      {name:'GBP'},
-                      {name:'LVL'},
-                      {name:'LTL'},
-                    ]
-                 })
+                  +currency-select()
 
   .application-form__card-line
     +button({type:'bordered'})(type="button")
