--- a/app/sass/components/input.sass
+++ b/app/sass/components/input.sass
@@ -19,3 +19,8 @@
     padding: 11px 15px 12px
     &:focus
       border-color: $c-surfie-green
+  &--sm
+    padding: 6px 10px 7px
+    font-size: rem(13px)
+    &::placeholder
+      font-size: rem(12px)
