--- a/app/pug/pages/application-page/step-1/_index.pug
+++ b/app/pug/pages/application-page/step-1/_index.pug
@@ -4,6 +4,8 @@ include /partials/radio
 include /partials/input
 include /partials/button
 include /partials/checkbox
+include /partials/lang-alt-select
+include /partials/currency-select
 
 form.application-form
   .application-form__title
