--- a/app/sass/components/select.sass
+++ b/app/sass/components/select.sass
@@ -35,16 +35,19 @@ $select-height: 45px
   // Elements
   &__label
     position: relative
-    padding: 0 40px 0 20px
+    padding: 0 40px 0 15px
     height: $select-height
     display: flex
     align-items: center
-    justify-content: space-between
     font-size: rem(14px)
     font-weight: 400
     line-height: 1
     color: $c-silver-chalice
     white-space: nowrap
+    &>*:not(:last-child)
+      margin-right: 5px
+    img
+      max-width: 18px
     &[data-selected]
       color: $c-tundora
     &:before,
@@ -65,13 +68,7 @@ $select-height: 45px
       height: 6px
       transform-origin: center
       +bg-img('../images/icons/triangle-down-blue.svg', 11px 6px)
-  &__left
-    display: flex
-    align-items: center
-  &__thumbnail
-    max-width: 18px
-    margin-right: 10px
-  &__options
+  &__wrap
     position: absolute
     display: none
     min-width: 100%
@@ -79,19 +76,30 @@ $select-height: 45px
     background-color: $c-white
     border-radius: 0 0 $r-primary $r-primary
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15)
-    overflow: hidden
     z-index: 200
+  &__search
+    padding: 10px
+    width: auto
+  &__options
+    overflow: hidden
     &-scroll
       max-height: 168px
   &__option
     display: flex
     align-items: center
-    justify-content: space-between
     padding: 10px 15px
-    white-space: nowrap
     font-size: rem(14px)
+    white-space: nowrap
     font-weight: 400
     color: $c-silver-chalice
+    img
+      max-width: 18px
+    &>*:not(:last-child)
+      margin-right: 5px
     &:hover
       background-color: $c-surfie-green
       color: $c-white
+    // State
+    &.is-selected
+      font-weight: 600
+      color: $c-tundora
