--- a/app/pug/partials/select.pug
+++ b/app/pug/partials/select.pug
@@ -1,4 +1,5 @@
 include /partials/input
+include /partials/button
 
 mixin select(props = {})
   -const { modifiers, label, options, auto, bordered, transparent, search } = props;
@@ -13,7 +14,7 @@ mixin select(props = {})
     })
 
   div(class=classnames)
-    .select__label.js-select-label(data-selected=label.name)
+    +button({classes:'select__label js-select-label', stadard:false})(data-selected=label.name type="button")
       | !{label.content}
     .select__wrap.js-select-wrap
       if(search)
